{{$NEXT}}

0.050005 2014-03-18

- Fixed some big bugs in the iterate_search_tree method. Both of them caused
  it to report the wrong IP address to the data callback.


0.050004 2014-03-10

- Added basic docs for this distro.


0.050003 2014-01-13

- Metadata reading in the pure Perl implementation was entirely broken on any
  database larger than the maximum metadata size (20kb).


0.050002 2013-12-30

- Added more checks for error conditions and broken databases.

- Error messages should now be the same for the pure Perl and XS readers.

- Added some more tests and made a small internals change to faciliate said
  tests.


0.050001 2013-12-24

- Tests failed on some systems because of rounding errors with doubles. We now
  use Test::Number::Delta to deal with this. Reported by Anreas Koenig. Github
  issue #2.


0.050000 2013-12-17

- Various changes and refactorings to support both a pure Perl and XS
  backend. MaxMind::DB::Reader::XS is a separate distro on CPAN. If you
  install this it will automatically be used when you use the
  MaxMind::DB::Reader module.

- Added a speed improvement for looking up IPv4 addresses in databases that
  contain both IPv4 and IPv6.

- Renamed all scripts in bin to start with "mmdb-".

- Made the mmdb-dump-database script output valid JSON.

- Added an mmdb-dump-search-tree script.


0.040003 2013-07-18

- No changes, didn't need to release, but thought I did.


0.040002 2013-07-18

- Explicitly require Perl 5.10+ for now. Getting this working on 5.8 might be
  possible in the future, and patches are welcome, but it's a fair bit of
  work, starting with getting Socket to support inet_pton on 5.8.x.

- Fixed test failures related to imprecise double storage. On some machines, a
  decoded double may be slightly off from the expected value because of
  floating point precision issues. The tests now just check that the value is
  within 0.001 of what we expect.


0.040000 2013-07-16

- First release upon an unsuspecting world.