@@ -1,6 +1,7 @@
 \#*\#
 .\#*
 .build
+.tidyall.d
 Build
 Debian_CPANTS.txt
 MANIFEST
