@@ -6,10 +6,9 @@ use namespace::autoclean;
 use autodie;
 
 use Data::Validate::IP 0.16
-    qw( is_ipv4 is_ipv6 is_private_ipv4 is_private_ipv6 );
+    qw( is_ipv4 is_ipv6 );
 use Math::Int128 qw( uint128 );
 use MaxMind::DB::Types qw( Str );
-use Net::Works::Address 0.12;
 
 use Moo::Role;
 
@@ -34,14 +33,11 @@ sub record_for_address {
     my $addr = shift;
 
     die 'You must provide an IP address to look up'
-        unless defined $addr and length $addr;
+        unless defined $addr && length $addr;
 
     die
         "The IP address you provided ($addr) is not a valid IPv4 or IPv6 address"
         unless is_ipv4($addr) || is_ipv6($addr);
-
-    die "The IP address you provided ($addr) is not a public IP address"
-        if is_private_ipv4($addr) || is_private_ipv6($addr);
 
     return $self->_data_for_address($addr);
 }
